[gd_scene load_steps=8 format=3 uid="uid://doww31i0hni4n"]

[ext_resource type="Script" path="res://Scripts/start_menu.gd" id="1_urxce"]
[ext_resource type="FontFile" uid="uid://5d1spnit1cod" path="res://Assets/Fonts/zx-spectrum.ttf" id="2_07vyi"]
[ext_resource type="PackedScene" uid="uid://dlcqpoa0yl62j" path="res://Scenes/build_info.tscn" id="2_pjfem"]
[ext_resource type="AudioStream" uid="uid://cprnbcgv7dmtr" path="res://Assets/Sounds/mmbg1.wav" id="3_x4y0a"]
[ext_resource type="Texture2D" uid="uid://bhgey8l1lxf7v" path="res://Assets/Sprites/robot/robommr-l1-sprites1.png" id="5_ipknn"]
[ext_resource type="Texture2D" uid="uid://cd62puxddkems" path="res://Assets/Sprites/padlock.png" id="6_71etm"]

[sub_resource type="LabelSettings" id="LabelSettings_llwr7"]
font_size = 56

[node name="StartMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_urxce")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -480.0
offset_right = 480.0
offset_bottom = 67.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_07vyi")
text = "Manic Miner Run"
label_settings = SubResource("LabelSettings_llwr7")

[node name="Exit" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.025
anchor_top = 0.455556
anchor_right = -0.025
anchor_bottom = 0.455556
offset_left = 793.0
offset_top = 172.0
offset_right = 913.0
offset_bottom = 230.0
theme_override_font_sizes/font_size = 36
text = "Exit"

[node name="BuildInfo" parent="." instance=ExtResource("2_pjfem")]

[node name="MenuTune" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_x4y0a")
volume_db = -26.703
autoplay = true

[node name="Level1" type="Button" parent="."]
layout_mode = 0
offset_left = 64.0
offset_top = 127.0
offset_right = 380.0
offset_bottom = 391.0
theme_override_fonts/font = ExtResource("2_07vyi")
text = "Robot
Mania"
icon = ExtResource("5_ipknn")

[node name="Level2" type="Button" parent="."]
layout_mode = 0
offset_left = 448.0
offset_top = 127.0
offset_right = 764.0
offset_bottom = 391.0
theme_override_fonts/font = ExtResource("2_07vyi")
text = "????
"
icon = ExtResource("6_71etm")

[connection signal="pressed" from="Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="Level1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="Level2" to="." method="_on_level_2_pressed"]
